tech/k8s/networking/ingress/gate-unit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate-unit-deployment
  namespace: go-gate-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gate-unit
  template:
    metadata:
      labels:
        app: gate-unit
    spec:
      containers:
        - name: gate-unit
          image: namphamhai/gate-unit:v0.0.2
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /unit/health-check
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /unit/health-check
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: gate-unit-service
  namespace: go-gate-ns
spec:
  selector:
    app: gate-unit
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
